--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -357,7 +357,7 @@
 
 
 <button mat-icon-button color="primary" class="mobile-filter-button d-flex" [matMenuTriggerFor]="menu">
-    <i class="fa-solid fa-gear"></i>
+    <i class="fa-solid fa-ellipsis-vertical"></i>
     <mat-menu #menu="matMenu">
       <button mat-menu-item class="primary" (click)="showAdvancedFilter()">
         <i class="fa-solid fa-filter"></i>&nbsp;
