--- a/src/app/admin/rooms/rooms.component.html
+++ b/src/app/admin/rooms/rooms.component.html
@@ -151,7 +151,7 @@
 </div>
 
 <button mat-icon-button color="primary" class="mobile-filter-button d-flex" [matMenuTriggerFor]="menu">
-  <i class="fa-solid fa-cog"></i>
+  <i class="fa-solid fa-ellipsis-vertical"></i>
   <mat-menu #menu="matMenu">
     <button *ngIf="model.dataSource.data.length < 1" mat-menu-item class="primary" (click)="input.click()">
       إضافة الغرف من ملف أكسيل
