Change Main Loading

--- a/src/app/shared/components/loading/loading.component.html
+++ b/src/app/shared/components/loading/loading.component.html
@@ -1,19 +1,10 @@
-<div *ngIf="loadingService.loading | async" class="loader">
-  <div class="loader-inner">
-    <div class="loader-line-wrap">
-      <div class="loader-line"></div>
-    </div>
-    <div class="loader-line-wrap">
-      <div class="loader-line"></div>
-    </div>
-    <div class="loader-line-wrap">
-      <div class="loader-line"></div>
-    </div>
-    <div class="loader-line-wrap">
-      <div class="loader-line"></div>
-    </div>
-    <div class="loader-line-wrap">
-      <div class="loader-line"></div>
-    </div>
+<div ngIf="loadingService.loading | async" class="loading-container">
+  <div class="sk-chase">
+    <div class="sk-chase-dot"></div>
+    <div class="sk-chase-dot"></div>
+    <div class="sk-chase-dot"></div>
+    <div class="sk-chase-dot"></div>
+    <div class="sk-chase-dot"></div>
+    <div class="sk-chase-dot"></div>
   </div>
 </div>
