--- a/src/app/admin/all-subscription/add-room-to-member/add-room-to-member.component.html
+++ b/src/app/admin/all-subscription/add-room-to-member/add-room-to-member.component.html
@@ -5,30 +5,70 @@
     </button>
 </div>
 <div mat-dialog-content>
+    <div class="alert alert-info">
+        برجاء تحديد الأعضاء إذا أردت أن تسكن أكثر من عضو واحد
+    </div>
     <div class="bg-white p-3 rounded mb-3">
-        <small class="text-muted">
-            برجاء تحديد الأشخاص إذا أردت أن تسكن أكثر من شخص
-        </small>
-        <div class="font-weight-bold">
+        <div class="font-weight-bold mb-2">
             الأشتراك الرئيسي:
         </div>
-        <div *ngIf="primary" class="d-flex justify-content-between align-items-center">
+        <div *ngIf="primary" class="d-flex justify-content-between align-items-center flex-md-row flex-column member-card py-2 px-2 rounded">
             <mat-checkbox color="primary" [disabled]="primary.hasRoom" [value]="primary.id" [(ngModel)]="primary.isChecked">
-                {{primary.name}}
+                <div class="d-flex flex-column">
+                    <div class="text-dark font-weight-bold">{{primary.name}}</div>
+                    <small *ngIf="primary.hasRoom; else notHasRoom" class="text-success">
+                        تم التسكين بنجاح
+                    </small>
+                </div>
             </mat-checkbox>
-            <!-- <a class="text-danger cancel-room" href="javascript:void(0)" (click)="cancel(primary.id)">
-                إلغاء التسكين   
-            </a> -->
+            <small *ngIf="primary.hasRoom" class="d-flex flex-column">
+                <span class="text-success">({{primary.roomName}})</span>
+                <a class="text-danger text-decoration-none" href="javascript:void(0)" (click)="openRoomCancellationModal(primary)">
+                    <i class="fa-solid fa-circle-minus"></i>&nbsp;إلغاء التسكين  
+                </a>
+                <a class="primary text-decoration-none" href="javascript:void(0)" (click)="openRoomCancellationModal(primary)">
+                    <i class="fa-solid fa-right-left"></i>&nbsp;نقل إلي غرفة أخري
+                </a>
+            </small>
         </div>
-        <div class="font-weight-bold">
-            العائلة:
+    </div>
+    <div class="bg-white p-3 rounded mb-3">
+        <div class="font-weight-bold mb-2">
+            باقي المشتركين:
         </div>
         <ng-container *ngIf="family.length > 0; else noFamily">
-            <div *ngFor="let f of family" class="d-flex justify-content-between align-items-center">
-               <mat-checkbox color="primary" [disabled]="f.hasRoom" [value]="f.id" [(ngModel)]="f.isChecked">{{f.name}}</mat-checkbox>
-               <!-- <a class="text-danger cancel-room" href="javascript:void(0)" (click)="cancel(f.id)">
-                    إلغاء التسكين   
-               </a> -->
+            <div *ngFor="let f of family; last as last" class="d-flex justify-content-between align-items-lg-center align-items-start flex-md-row flex-column member-card py-2 px-2 rounded" [class.mb-3]="!last">
+                <mat-checkbox color="primary" [disabled]="f.hasRoom || f.age < 4" [value]="f.id" [(ngModel)]="f.isChecked">
+                    <div class="d-flex flex-column">
+                        <span class="text-dark font-weight-bold">{{f.name}}</span>
+                        <div class="d-flex flex-column">
+                            <small *ngIf="f.hasRoom; else notHasRoom" class="text-success">
+                                تم التسكين بنجاح 
+                            </small>
+                            <ng-container *ngIf="f.isChild">
+                                <small>
+                                    <b>السن: </b> ({{f.age}}) 
+                                    <i class="fa-solid fa-child primary px-2"></i>
+                                </small>
+                                <small>
+                                    <b>مطلوب سرير منفصل: </b> 
+                                    <ng-container *ngIf="f.needsSeparateBed; else noBedNeeded">
+                                        <i class="fa-regular fa-circle-check text-success"></i>
+                                    </ng-container>
+                                </small>
+                            </ng-container>
+                        </div>
+                    </div>
+                </mat-checkbox>
+                <small *ngIf="f.hasRoom" class="d-flex flex-column">
+                    <span class="text-success">({{f.roomName}})</span>
+                    <a class="text-danger text-decoration-none" href="javascript:void(0)" (click)="openRoomCancellationModal(f)">
+                        <i class="fa-solid fa-circle-minus"></i>&nbsp;إلغاء التسكين  
+                    </a>
+                    <a class="primary text-decoration-none" href="javascript:void(0)" (click)="openRoomCancellationModal(f)">
+                        <i class="fa-solid fa-right-left"></i>&nbsp;نقل إلي غرفة أخري
+                    </a>
+                </small> 
             </div>
         </ng-container>
         <ng-template #noFamily>
@@ -36,9 +76,6 @@
                 هذا الاشتراك لا يحتوي علي أفراد آخرين أو أطفال
             </div>
         </ng-template>
-        <small *ngIf="showEmptySelectErrorMessage" class="text-danger">
-            يجب إختيار شخص علي الأقل لأكمال عملية التسكين
-        </small>
         <small *ngIf="isExceededRoomAvailability" class="text-danger">
             لا يوجد أماكن متاحة بالغرفة لهذا العدد
         </small>
@@ -56,9 +93,23 @@
             </mat-error>
         </mat-form-field>
     </form>
+    <div [hidden]="!showEmptySelectErrorMessage" class="alert alert-danger mt-3" id="emptySelectionContainer">
+        يجب إختيار عضو علي الأقل لأكمال عملية التسكين
+    </div>
 </div>
 <div mat-dialog-actions>
-    <button color="primary" mat-flat-button type="button" cdkFocusInitial (click)="save($event, roomForm)">
+    <button color="primary" mat-flat-button type="button" [disabled]="isSaveButtonDisabled || isSaveLoading" cdkFocusInitial (click)="save($event, roomForm)">
         <span> {{ 'common.save' | translate }}</span>
+        <i *ngIf="isSaveLoading" class="fa-solid fa-spinner fa-spin mx-2"></i>
     </button>
 </div>
+
+<ng-template #notHasRoom>
+    <small class="text-danger">
+        غير مسكن
+    </small>
+</ng-template>
+
+<ng-template #noBedNeeded>
+    <i class="fa-regular fa-circle-xmark text-danger"></i>
+</ng-template>
