--- a/src/app/shared/components/loading/loading.component.html
+++ b/src/app/shared/components/loading/loading.component.html
@@ -1,4 +1,4 @@
-<div ngIf="loadingService.loading | async" class="loading-container">
+<div *ngIf="loadingService.loading | async" class="loading-container">
   <div class="sk-chase">
     <div class="sk-chase-dot"></div>
     <div class="sk-chase-dot"></div>
