--- a/src/app/admin/all-subscription/all-subscription.component.html
+++ b/src/app/admin/all-subscription/all-subscription.component.html
@@ -13,22 +13,8 @@
               <div class="d-flex justify-content-between align-items-start">
                 <div>
                   <div class="d-flex">
-                    <div [ngSwitch]="element.bookingStatus" class="mb-2">
-                      <div *ngSwitchCase="model.bookingStatus.confirmed">
-                        <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}</div>
-                      </div>
-                      <div *ngSwitchCase="model.bookingStatus.duplicated">
-                        <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate }}</div>
-                      </div>
-                      <div *ngSwitchCase="model.bookingStatus.canceled">
-                        <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}</div>
-                      </div>
-                      <div *ngSwitchCase="model.bookingStatus.waiting">
-                        <div class="badge px-2 py-1 badge-secondary">{{ 'bookingStatus.waiting' | translate }}</div>
-                      </div>
-                      <div *ngSwitchDefault>
-                        <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}</div>
-                      </div>
+                    <div class="mb-2">
+                      <app-ticket-status [status]="element.bookingStatus"></app-ticket-status>
                     </div>
                     <span class="mx-2">
                       <i *ngIf="element.isChild" class="fa-solid fa-child primary"></i>
@@ -157,23 +143,7 @@
               {{'common.bookingStatus' | translate}}
             </th>
             <td mat-cell *matCellDef="let element" class="col-1">
-              <ng-container [ngSwitch]="element.bookingStatus">
-                <div *ngSwitchCase="model.bookingStatus.confirmed">
-                  <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}</div>
-                </div>
-                <div *ngSwitchCase="model.bookingStatus.duplicated">
-                  <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate }}</div>
-                </div>
-                <div *ngSwitchCase="model.bookingStatus.canceled">
-                  <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}</div>
-                </div>
-                <div *ngSwitchCase="model.bookingStatus.waiting">
-                  <div class="badge px-2 py-1 badge-secondary">{{ 'bookingStatus.waiting' | translate }}</div>
-                </div>
-                <div *ngSwitchDefault>
-                  <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}</div>
-                </div>
-              </ng-container>
+              <app-ticket-status [status]="element.bookingStatus"></app-ticket-status>
             </td>
             <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
