--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -12,22 +12,8 @@
                         <td mat-cell *matCellDef="let element" class="py-2">
                             <div class="d-flex justify-content-between align-items-start">
                                 <div class="d-flex flex-column">
-                                    <div [ngSwitch]="element.bookingStatus" class="mb-2">
-                                        <div *ngSwitchCase="model.bookingStatus.confirmed">
-                                            <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}</div>
-                                        </div>
-                                        <div *ngSwitchCase="model.bookingStatus.duplicated">
-                                            <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate }}</div>
-                                        </div>
-                                        <div *ngSwitchCase="model.bookingStatus.canceled">
-                                            <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}</div>
-                                        </div>
-                                        <div *ngSwitchCase="model.bookingStatus.waiting">
-                                            <div class="badge px-2 py-1 badge-secondary">{{ 'bookingStatus.waiting' | translate }}</div>
-                                        </div>
-                                        <div *ngSwitchDefault>
-                                            <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}</div>
-                                        </div>
+                                    <div class="mb-2">
+                                        <app-ticket-status [status]="element.bookingStatus"></app-ticket-status>
                                     </div>
                                     <div><b>{{'common.name' | translate}}:</b> {{element.name}}</div>
                                     <div class="d-flex">
@@ -96,6 +82,11 @@
                                             {{element.adminNotes}}
                                         </ng-container>
                                     </div>
+                                    <div> <b>تم الحذف بواسطة: </b>
+                                        <ng-container *ngIf="element.bookingStatus === model.bookingStatus.deleted && element.deletedBy">
+                                            {{element.deletedBy}}
+                                        </ng-container>
+                                    </div>
                                 </div>
                                 <div class="d-flex flex-column">
                                     <div>
@@ -103,10 +94,13 @@
                                             <i class="fa-solid fa-ellipsis"></i>
                                         </button>
                                         <mat-menu #menu="matMenu">
-                                            <button mat-menu-item class="primary" (click)="update(element)">{{'common.edit' |
-                                                translate}}</button>
-                                            <button mat-menu-item class="text-danger"
-                                                (click)="delete(element)">{{'common.delete' | translate}}</button>
+                                            <button mat-menu-item class="primary" (click)="update(element)">
+                                                {{'common.edit' | translate}}
+                                            </button>
+                                            <button *ngIf="element.bookingStatus != model.bookingStatus.deleted" mat-menu-item class="text-danger"
+                                                (click)="delete(element)">
+                                                {{'common.delete' | translate}}
+                                            </button>
                                         </mat-menu>
                                     </div>
                                     <app-social-media [mobile]="element.mobile"></app-social-media>
@@ -248,22 +242,7 @@
                     <ng-container matColumnDef="bookingStatus">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'table.bookingStatus' | translate}}</th>
                         <td mat-cell *matCellDef="let element">
-                            <ng-container [ngSwitch]="element.bookingStatus">
-                                <div *ngSwitchCase="2">
-                                    <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}</div>
-                                </div>
-                                <div *ngSwitchCase="3">
-                                    <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate }}
-                                    </div>
-                                </div>
-                                <div *ngSwitchCase="4">
-                                    <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}
-                                    </div>
-                                </div>
-                                <div *ngSwitchDefault>
-                                    <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}</div>
-                                </div>
-                            </ng-container>
+                            <app-ticket-status [status]="element.bookingStatus"></app-ticket-status>
                         </td>
                         <td mat-footer-cell *matFooterCellDef></td>
                     </ng-container>
@@ -305,26 +284,12 @@
                         </td>
                         <td mat-footer-cell *matFooterCellDef></td>
                     </ng-container>
-        
-                    <ng-container matColumnDef="status">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.bookingStatus' | translate}}</th>
-                        <td mat-cell *matCellDef="let element">
-                            <ng-container [ngSwitch]="element.bookingStatus">
-                                <div *ngSwitchCase="model.bookingStatus.confirmed">
-                                    <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}</div>
-                                  </div>
-                                  <div *ngSwitchCase="model.bookingStatus.duplicated">
-                                    <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate }}</div>
-                                  </div>
-                                  <div *ngSwitchCase="model.bookingStatus.canceled">
-                                    <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}</div>
-                                  </div>
-                                  <div *ngSwitchCase="model.bookingStatus.waiting">
-                                    <div class="badge px-2 py-1 badge-secondary">{{ 'bookingStatus.waiting' | translate }}</div>
-                                  </div>
-                                  <div *ngSwitchDefault>
-                                    <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}</div>
-                                  </div>
+
+                    <ng-container matColumnDef="deletedBy">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>تم الحذف بواسطة</th>
+                        <td mat-cell *matCellDef="let element" class="width-135">
+                            <ng-container *ngIf="element.bookingStatus === model.bookingStatus.deleted && element.deletedBy">
+                                {{element.deletedBy}}
                             </ng-container>
                         </td>
                         <td mat-footer-cell *matFooterCellDef></td>
@@ -337,10 +302,12 @@
                                 <i class="fa-solid fa-ellipsis"></i>
                             </button>
                             <mat-menu #menu="matMenu">
-                                <button mat-menu-item class="primary" (click)="update(element)">{{'common.edit' |
-                                    translate}}</button>
-                                <button mat-menu-item class="text-danger" (click)="delete(element)">{{'common.delete' |
-                                    translate}}</button>
+                                <button mat-menu-item class="primary" (click)="update(element)">
+                                    {{'common.edit' | translate}}
+                                </button>
+                                <button *ngIf="element.bookingStatus != model.bookingStatus.deleted" mat-menu-item class="text-danger" (click)="delete(element)">
+                                    {{'common.delete' | translate}}
+                                </button>
                             </mat-menu>
                         </td>
                         <td mat-footer-cell *matFooterCellDef></td>
