--- a/src/app/admin/all-subscription/all-subscription.component.html
+++ b/src/app/admin/all-subscription/all-subscription.component.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="d-flex justify-content-between flex-column">
                   <app-social-media [mobile]="element.mobile"></app-social-media>
-                  <a href="javascript:void(0)" (click)="addRoomToMember(element)" class="primary pt-4">
+                  <a *ngIf="element.bookingStatus != model.bookingStatus.deleted" href="javascript:void(0)" (click)="addRoomToMember(element)" class="primary pt-4">
                     <i class="fa-solid fa-bed"></i>
                   </a>
                 </div>
@@ -61,8 +61,9 @@
     
             </td>
             <td mat-footer-cell *matFooterCellDef class="px-0">
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="pr-3">{{'common.total' | translate}}: <b>{{model.total}}</b></div>
+              <div class="pr-3 d-flex">
+                {{'common.total' | translate}}: <b>{{model.total}}</b>
+                <small class="text-danger px-2">(بدون المحذوف)</small>
               </div>
             </td>
           </ng-container>
@@ -83,7 +84,12 @@
                 </div>
               </div>
             </td>
-            <td mat-footer-cell *matFooterCellDef></td>
+            <td mat-footer-cell *matFooterCellDef>
+              <div class="d-flex flex-column">
+                <div>{{'common.total' | translate}}: <b>{{model.total}}</b></div>
+                <small class="text-danger">(بدون المحذوف)</small>
+              </div>
+            </td>
           </ng-container>
     
           <ng-container matColumnDef="mobile">
@@ -161,17 +167,16 @@
           <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef class="col-1"></th>
             <td mat-cell *matCellDef="let element">
-              <button mat-stroked-button color="primary" (click)="addRoomToMember(element)">
+              <button *ngIf="element.bookingStatus != model.bookingStatus.deleted" mat-stroked-button color="primary" (click)="addRoomToMember(element)">
                 تسكين
               </button>
             </td>
-            <td mat-footer-cell *matFooterCellDef>
-              الإجمالي: <b>{{model.total}}</b> 
-            </td>
+            <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="model.displayedColumns; sticky: true"></tr>
-          <tr mat-row *matRowDef="let row; columns: model.displayedColumns;"></tr>
+          <tr mat-row *matRowDef="let row; columns: model.displayedColumns;"
+            [class.deleted-row]="row.bookingStatus === model.bookingStatus.deleted"></tr>
           <tr mat-footer-row *matFooterRowDef="model.displayedColumns; sticky: true"></tr>
         </table>
       </div>
