Add deleted members page

--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -110,7 +110,6 @@
                         <td mat-footer-cell *matFooterCellDef class="px-0">
                             <div class="pr-3 d-flex">
                                 {{'common.total' | translate}}: <b>{{model.total}}</b>
-                                <small class="text-danger px-2">(بدون المحذوف)</small>
                             </div>
                         </td>
                     </ng-container>
@@ -121,9 +120,8 @@
                             {{element.name}}
                         </td>
                         <td mat-footer-cell *matFooterCellDef>
-                            <div class="d-flex flex-column">
-                                <div>{{'common.total' | translate}}: <b>{{model.total}}</b></div>
-                                <small class="text-danger">(بدون المحذوف)</small>
+                            <div class="d-flex">
+                                {{'common.total' | translate}}: <b>{{model.total}}</b>
                             </div>
                         </td>
                     </ng-container>
@@ -320,8 +318,7 @@
                     </ng-container>
         
                     <tr mat-header-row *matHeaderRowDef="model.displayedColumns; sticky: true"></tr>
-                    <tr mat-row *matRowDef="let row; columns: model.displayedColumns;" 
-                        [class.deleted-row]="row.bookingStatus === model.bookingStatus.deleted"></tr>
+                    <tr mat-row *matRowDef="let row; columns: model.displayedColumns;"></tr>
                     <tr mat-footer-row *matFooterRowDef="model.displayedColumns; sticky: true"></tr>
                 </table>
             </div>
