--- a/src/app/admin/deleted-members/deleted-members.component.html
+++ b/src/app/admin/deleted-members/deleted-members.component.html
@@ -10,22 +10,23 @@
           <ng-container matColumnDef="mobileView">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element" class="py-2">
-              <div class="d-flex justify-content-between align-items-start">
-                <div>
-                  <div class="d-flex">
-                    <span class="mx-2">
-                      <i *ngIf="element.isChild" class="fa-solid fa-child primary"></i>
-                      <i *ngIf="element.isMain" class="fa-solid fa-star primary"></i>
-                    </span>
-                  </div>
-                  <div><b>{{'common.name' | translate}}: </b> {{element.name}}</div>
-                  <small *ngIf="!element.isMain" class="text-success">
-                    {{element.mainMemberName}} <i class="fa-solid fa-star"></i>
-                  </small>
-                  <div class="d-flex">
-                    <b>{{'common.mobile' | translate}}:</b>&nbsp;
-                    {{ element.mobile }}
-                  </div>
+              <div class="d-flex justify-content-between align-items-start flex-column">
+                <div class="d-flex">
+                  <span class="mx-2">
+                    <i *ngIf="element.isChild" class="fa-solid fa-child primary"></i>
+                    <i *ngIf="element.isMain" class="fa-solid fa-star primary"></i>
+                  </span>
+                </div>
+                <div><b>{{'common.name' | translate}}: </b> {{element.name}}</div>
+                <div class="d-flex"><b>المشترك الرئيسي التابع له: </b>&nbsp;
+                  <div *ngIf="!element.isMain; else sameMember" class="text-success">{{element.mainMemberName}}</div>
+                </div>
+                <div class="d-flex">
+                  <b>{{'common.mobile' | translate}}:</b>&nbsp;
+                  {{ element.mobile }}
+                </div>
+                <div> <b>تم الحذف بواسطة: </b>
+                  {{element.deletedBy}}
                 </div>
               </div>
             </td>
@@ -40,12 +41,7 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.name' | translate}}</th>
             <td mat-cell *matCellDef="let element" class="col-2">
               <div class="d-flex">
-                <div class="d-flex flex-column">
-                  <div>{{element.name}}</div>
-                  <small *ngIf="!element.isMain" class="text-success">
-                    {{element.mainMemberName}} <i class="fa-solid fa-star"></i>
-                  </small>
-                </div>
+                <div>{{element.name}}</div>
                 <div class="px-2">
                   <i *ngIf="element.isChild" class="fa-solid fa-child primary"></i>
                   <i *ngIf="element.isMain" class="fa-solid fa-star primary"></i>
@@ -59,15 +55,31 @@
             </td>
           </ng-container>
 
+          <ng-container matColumnDef="primaryMemberName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>المشترك الرئيسي التابع له</th>
+            <td mat-cell *matCellDef="let element" class="col-2">
+              <div *ngIf="!element.isMain; else sameMember" class="text-success">{{element.mainMemberName}}</div>
+            </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+
           <ng-container matColumnDef="mobile">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.mobile' | translate}}</th>
-            <td mat-cell *matCellDef="let element">
+            <td mat-cell *matCellDef="let element" class="col-3">
               <div class="d-flex">
                 <div class="px-2">{{ element.mobile}}</div>
-                <div class="col-2">
+                <div class="col-6">
                   <app-social-media [mobile]="element.mobile"></app-social-media>
                 </div>
               </div>
+            </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+
+          <ng-container matColumnDef="deletedBy">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>تم الحذف بواسطة</th>
+            <td mat-cell *matCellDef="let element" class="width-135">
+              {{element.deletedBy}}
             </td>
             <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
@@ -80,3 +92,6 @@
     </div>
   </div>
 </div>
+<ng-template #sameMember>
+ذاته
+</ng-template>
